k8s/overlays/gke/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olympis-server
spec:
  template:
    spec:
      priorityClassName: high-priority-core
      containers:
        - name: server
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              memory: "2Gi"
