k8s/overlays/gke/patch-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      priorityClassName: high-priority-core
      containers:
        - name: redis
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
